docker/prod/k8s/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  namespace: homepage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: jutonz/homepage-prod-app:31
        name: app
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
      restartPolicy: Always
