docker/prod/k8s/psql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: psql
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - image: postgres:10.0-alpine
        name: psql
      restartPolicy: Always
