docker/prod/k8s/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: jutonz/homepage-prod-redis:1
        name: redis
        imagePullPolicy: Always
      restartPolicy: Always
