docker/prod/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: homepage
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
