docker/prod/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: homepage
spec:
  ports:
  - port: 80
    name: http-upgrade
  - port: 443
    name: https
  type: LoadBalancer
  selector:
    app: nginx
