docker/prod/k8s/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql
  namespace: homepage
spec:
  selector:
    app: psql
  ports:
  - name: psql
    port: 5432
    targetPort: 5432
