docker/prod/k8s/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homepage
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  # tls:
  # - hosts:
  #   - notmalware.biz
  #   secretName: notmalware-tls
  rules:
  - host: homepage-test.notmalware.biz
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
