docker/prod/k8s/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homepage
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - homepage-test.notmalware.biz
    secretName: homepage-test-notmalware-tls
  rules:
  - host: homepage-test.notmalware.biz
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
