docker/prod/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homepage
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jutonz.com
    secretName: homepage-lego-secret
  rules:
  - host: jutonz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
